<resources>
    <string name="app_name">Banhpeo</string>

    <string-array name="Menu">
        <item>Announcement</item>
        <item>Lectures</item>
        <item>Assignment</item>
        <item>Grade</item>
    </string-array>

    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_course">Courses</string>
    <string name="nav_account">Account</string>
    <string name="nav_user">My Profile</string>
    <string name="nav_change_pass">Change Password</string>
    <string name="nav_logout">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>