<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home">

        </item>

        <item
            android:id="@+id/nav_favorite"
            android:title="@string/nav_favorite"
            android:icon="@drawable/ic_favorite">

        </item>

        <item
            android:id="@+id/nav_course"
            android:title="@string/nav_course"
            android:icon="@drawable/ic_baseline_class_24">

        </item>
    </group>

    <item
        android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:title="@string/nav_user"
                android:icon="@drawable/ic_user">
            </item>

            <item
                android:id="@+id/nav_change_pass"
                android:title="@string/nav_change_pass"
                android:icon="@drawable/ic_password">
            </item>
        </menu>

    </item>

</menu>